# rust_project

./: Cargo.toml
migrations/: 20230125142109_initial_migration.down.sql  20230125142109_initial_migration.up.sql
src/: api.rs  dependencies.rs  domain.rs  environment.rs  main.rs  repository.rs  service.rs
src/api/: payment_handler.rs  routes.rs
src/domain/: buyer.rs  payment.rs
src/repository/: payment.rs
src/service/: ledger.rs
