[package]
name = "payment_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "json"] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
